force-app/main/default/objects/CalendarTimetable__c/CalendarTimetable__c.object-meta.xml
<CustomObject>
    <description>Junction object related to Calendar Setting and Timetable. Allows many-to.may relations.</description>
    <label>Relación de Horarios y Calendarios</label>
    <nameField>
        <displayFormat>CT-{000000000}</displayFormat>
        <label>Calendar Timetable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relaciones de Horarios y Calendarios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>