force-app/main/default/objects/CalendarTimetable__c/fields/CalendarSetting__c.field-meta.xml
<CustomField>
    <fullName>CalendarSetting__c</fullName>
    <label>Calendar Setting</label>
    <referenceTo>CalendarSetting__c</referenceTo>
    <relationshipLabel>Calendars Timetable</relationshipLabel>
    <relationshipName>CalendarTimetables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>