force-app/main/default/objects/CalendarTimetable__c/fields/EffectiveFrom__c.field-meta.xml
<CustomField>
    <fullName>EffectiveFrom__c</fullName>
    <description>Calendar Setting and time table intersection date</description>
    <label>Effective - From</label>
    <type>DateTime</type>
</CustomField>