force-app/main/default/objects/CalendarTimetable__c/fields/EffectiveTo__c.field-meta.xml
<CustomField>
    <fullName>EffectiveTo__c</fullName>
    <description>Calendar Setting and time table intersection date</description>
    <label>Effective - To</label>
    <type>DateTime</type>
</CustomField>