force-app/main/default/objects/CalendarTimetable__c/fields/Timetable__c.field-meta.xml
<CustomField>
    <fullName>Timetable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timetable</label>
    <referenceTo>Timetable__c</referenceTo>
    <relationshipLabel>Calendars Timetable</relationshipLabel>
    <relationshipName>CalendarTimetables</relationshipName>
    <type>Lookup</type>
</CustomField>